fixed css rule duplicatins and align elements in the footer to the center

--- a/css/style.css
+++ b/css/style.css
@@ -61,12 +61,10 @@ body {
 }
 
 .bg-white-black-text {
-  background-color: #fff;
   color: #000;
 }
 
 .d-flex-vertical-center-column {
-  display: flex;
   justify-content: center;
   flex-direction: column;
 }
@@ -125,13 +123,8 @@ body {
 }
 
 nav .header-container {
-  display: flex;
   padding: 0.8rem 0;
   align-items: center;
-}
-
-nav .nav-items {
-  display: flex;
 }
 
 .border-radius-3 {
@@ -155,17 +148,20 @@ nav .brand-logo {
   font-size: 1.2rem;
 }
 
-.flex-center-center {
-  display: flex;
+.width-100 {
   width: 100%;
-  align-items: center;
-  justify-content: center;
+}
+
+.height-70vh {
   height: 70vh;
 }
 
+.flex-center-center {
+  align-items: center;
+  justify-content: center;
+}
+
 .landing-section {
-  width: 100%;
-  height: 70vh;
   background-image: linear-gradient(135deg, rgba(2, 11, 26, 0.5), rgba(2, 11, 26, 0.9)), url('../images/bg-1.jpg');
   background-size: cover;
   background-repeat: no-repeat;
@@ -178,18 +174,12 @@ nav .brand-logo {
 
 .landing-section .landing-page-heading {
   margin-bottom: 0.7rem;
-  text-align: center;
 }
 
 .landing-section .search-form {
   background-color: rgba(255, 255, 255, 0.5);
   padding: 1.4rem 1.4rem;
   border-radius: 5px;
-}
-
-.landing-section .fomr-group {
-  display: flex;
-  align-items: center;
 }
 
 .landing-section .form-control,
@@ -230,16 +220,13 @@ nav .brand-logo {
 }
 
 .steps-section .grid-container {
-  display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr 1fr;
-  text-align: center;
   grid-gap: 10rem;
 }
 
 .steps-section .steps-header {
   color: #d84315;
-  text-align: center;
   margin: 3rem 0;
 }
 
@@ -328,7 +315,6 @@ footer .contact-info {
 }
 
 footer .footer-subscribe {
-  display: flex;
   justify-content: center;
 }
 
@@ -581,7 +567,6 @@ section.filter-results .form-control,
   }
 
   nav .header-container {
-    display: flex;
     padding: 0.8rem 0;
     flex-direction: column;
     align-items: center;
@@ -637,6 +622,11 @@ section.filter-results .form-control,
 
   footer .d-flex-row {
     flex-direction: column;
+    justify-content: center;
+  }
+
+  footer .footer-nav-bar {
+    text-align: center;
   }
 
   footer .d-none-sm {
@@ -653,8 +643,15 @@ section.filter-results .form-control,
     flex-direction: column;
   }
 
-  .social-container .d-flex-row {
+  footer .from-group {
+    margin: 0 auto;
+
+  }
+
+  .social-container .d-flex-row,
+  .social-container .some-info {
     flex-direction: column;
+    justify-content: center;
   }
 
   .social-container .social-icons {
@@ -665,6 +662,7 @@ section.filter-results .form-control,
   .social-container .some-item {
     margin: 0.2rem 0;
     font-size: 0.87rem;
+    text-align: center;
   }
 
   .filter-results .col-md,
